test/error/module_import_missing_package.sv
// pattern: could not find package "PackageThatDoesNotExist"
module top;
    import PackageThatDoesNotExist::*;
endmodule
